// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test MainPage component MainPage renders without crashing 1`] = `
<div>
  <h1>
    Infinity Friends
  </h1>
  <SearchBox
    onSearchFieldChange={[MockFunction]}
  />
  <button
    className="b ph2 grow bg-gold pv1  br4 ba b--yellow pointer f6 "
    onClick={[MockFunction]}
    style={
      Object {
        "position": "absolute",
        "right": "2%",
        "top": "2%",
      }
    }
  >
    Delete All
  </button>
  <div
    className="flex justify-center"
  >
    <Connect(SelectAvatarsConnect) />
    <button
      className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib ml2"
      onClick={[MockFunction]}
    >
      Create Friends
    </button>
  </div>
  <Scroll>
    <ErrorBoundry>
      <h1>
        No Friends 😔
      </h1>
    </ErrorBoundry>
  </Scroll>
</div>
`;

exports[`test MainPage component renders for create robots Page 1`] = `<Connect(CreateRobot) />`;

exports[`test MainPage component renders for request Robots 1`] = `
<div>
  <h1>
    Infinity Friends
  </h1>
  <SearchBox
    onSearchFieldChange={[MockFunction]}
  />
  <button
    className="b ph2 grow bg-gold pv1  br4 ba b--yellow pointer f6 "
    onClick={[MockFunction]}
    style={
      Object {
        "position": "absolute",
        "right": "2%",
        "top": "2%",
      }
    }
  >
    Delete All
  </button>
  <div
    className="flex justify-center"
  >
    <Connect(SelectAvatarsConnect) />
    <button
      className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib ml2"
      onClick={[MockFunction]}
    >
      Create Friends
    </button>
  </div>
  <Scroll>
    <ErrorBoundry>
      <h1>
        No Friends 😔
      </h1>
    </ErrorBoundry>
  </Scroll>
</div>
`;

exports[`test MainPage component renders if there is robots 1`] = `
<div>
  <h1>
    Infinity Friends
  </h1>
  <SearchBox
    onSearchFieldChange={[MockFunction]}
  />
  <button
    className="b ph2 grow bg-gold pv1  br4 ba b--yellow pointer f6 "
    onClick={[MockFunction]}
    style={
      Object {
        "position": "absolute",
        "right": "2%",
        "top": "2%",
      }
    }
  >
    Delete All
  </button>
  <div
    className="flex justify-center"
  >
    <Connect(SelectAvatarsConnect) />
    <button
      className="b ph3 pv2 input-reset ba b--black bg-transparent grow pointer f6 dib ml2"
      onClick={[MockFunction]}
    >
      Create Friends
    </button>
  </div>
  <Scroll>
    <ErrorBoundry>
      <Connect(CardConnect)
        filteredRobots={
          Array [
            Object {
              "firstName": "ali",
              "id": 1,
              "lastName": "ahmed",
            },
            Object {
              "firstName": "jhon",
              "id": 2,
              "lastName": "snow",
            },
          ]
        }
      />
    </ErrorBoundry>
  </Scroll>
</div>
`;
